--- a/.github/workflows/stage-deploy-batch-manually.yml
+++ b/.github/workflows/stage-deploy-batch-manually.yml
@@ -53,6 +53,6 @@ jobs:
         run: |
           gcloud auth configure-docker asia-northeast3-docker.pkg.dev
           docker build -t $GAR_LOCATION/$PROJECT_ID/$REPOSITORY/$IMAGE:$IMAGE_TAG . \
-          --build-arg VERSION="$IMAGE_TAG" \
+          --build-arg VERSION="$IMAGE_TAG"
           docker tag $GAR_LOCATION/$PROJECT_ID/$REPOSITORY/$IMAGE:$IMAGE_TAG $GAR_LOCATION/$PROJECT_ID/$REPOSITORY/$IMAGE:$IMAGE_TAG
           docker push $GAR_LOCATION/$PROJECT_ID/$REPOSITORY/$IMAGE:$IMAGE_TAG
